--- a/js/packages/candy-machine-ui/package.json
+++ b/js/packages/candy-machine-ui/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "candy-machine-mint",
+    "name": "stream-candy-machine-mint",
     "version": "0.2.0",
     "private": true,
     "dependencies": {
